# opt-intelligence

./: .gitignore  Agentic_Optimization_Platform_Handoff.md  Makefile  README.md  Repository_Bootstrap_Plan.md  pyproject.toml  requirements.txt  result.json
config/: llm.yaml
config/data_packets/: institutional_liquidity_base.yaml  institutional_liquidity_stress.yaml
config/demo_presets/: balanced_mvo_rebalance.yaml  collateral_hqla_schedule_stress.yaml  collateral_pressure_review.yaml  executive_liquidity_stress.yaml  funding_capacity_crisis.yaml  governed_recommendation_baseline.yaml  institutional_csv_liquidity_base.yaml  institutional_csv_liquidity_stress.yaml  large_notional_approval_review.yaml  margin_call_capacity_triage.yaml  production_constraint_change_review.yaml  treasury_cash_movement_cutoff.yaml  treasury_mmf_policy_optimization.yaml
config/workflows/: collateral_liquidity_review.yaml  funding_capacity_shock.yaml  liquidity_stress_funding.yaml  margin_call_workflow.yaml  money_market_policy_optimization.yaml  portfolio_rebalance_mvo.yaml  treasury_cash_movement.yaml
docs/: Executive_Summary_Agentic_Optimization_Platform.md  demo_video_runbook.md  real_data_demo_packet.md  scenario_reference_guide.docx  scenario_reference_guide.md
docs/broad_handoffs/: Agentic_Optimization_Platform_Handoff.md
docs/demos/: demo_video_runbook.md  ips_ingestion_demo.md  real_data_demo_packet.md
docs/design/: frontend_redesign_plan.md
docs/features/: CollateralSchedule_Handoff.md  FrontEnd_UI_PlanHandoff.md
docs/how_to/: collateral_optimization.md
docs/models/: solver_backends.md
docs/optimizers/: README.md  asset_allocation.md  collateral.md  financing.md
examples/: make_sample_pdf.py  run_demo.py  run_ips_ingestion_demo.py  run_ollama_ips_ingestion_demo.py  run_ollama_smoke.py  run_poc_video_demo.py  run_solver_demo.py
examples/collateral/: Example6_synthetic-triparty-eligibility-profile.txt  sample_repo_schedule.csv  sample_vm_schedule.csv
examples/data/: asset_allocation_assets.csv  asset_allocation_covariance.csv  cash_position.csv  collateral_assets.csv  collateral_obligations.csv  financing_counterparties.csv  financing_needs.csv  mmf_universe.csv  money_market_cash_position_production.csv  (+1 more)
scripts/: eval_collateral_llm.py  generate_collateral_ingestion_demo_video.py  generate_collateral_video_examples.py  generate_combined_frontend_demo_video.py  generate_compelling_video_examples.mjs  generate_ips_optimization_analytics_video.mjs  generate_ips_pdf_upload_workflow_video.mjs  generate_llm_ips_interactive_workflow_video.mjs  generate_money_market_video_examples.py  generate_operational_optimizer_video_examples.py  generate_presentation_video_example.py  generate_sample_full_ips_pdf.py  generate_sample_money_market_policy_pdf.py  record_collateral_hqla_frontend_video.mjs  record_money_market_policy_frontend_video.mjs  run_collateral_llm.py  run_demo_ui.sh
tests/: test_agents.py  test_api.py  test_audit_narrative.py  test_chat_workflow.py  test_cli_chat.py  test_constraint_negotiation.py  test_contracts.py  test_data_loaders.py  test_data_quality.py  test_explanation.py  test_governance.py  test_ingestion.py  test_llm.py  test_llm_entry_validation.py  test_orchestrator.py  test_policy_ingestion.py  test_production_execution.py  test_production_optimizer_adapters.py  test_registry.py  test_solvers.py  test_split_chunks.py  test_strip_repeated_headers.py  test_validation_engine.py  test_workflows.py
video_examples/: README.md
(+164 files in other folders)
