[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-intelligence"
version = "0.1.0"
description = "Agentic Optimization Platform — Decision Intelligence Framework"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.scripts]
di = "decision_intelligence.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
# PDF ingestion. 'pypdf' powers the offline heuristic backend; 'anthropic'
# enables the LLM backend (Claude reads the PDF natively). 'reportlab' is only
# needed to regenerate the sample brief.
ingest = [
    "pypdf>=4.0",
    "anthropic>=0.40",
    "reportlab>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
