[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-intelligence"
version = "0.1.0"
description = "Agentic Optimization Platform — Decision Intelligence Framework"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.scripts]
di = "decision_intelligence.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
# PDF ingestion. 'pypdf' powers the offline heuristic backend and the text
# fallback for non-native providers. 'reportlab' regenerates the sample brief.
# LLM providers are optional and pluggable — install whichever you use:
#   anthropic  → Claude (native PDF)
#   openai     → OpenAI / Azure / any OpenAI-compatible endpoint (incl. local
#                Ollama / vLLM / llama.cpp via DI_LLM_BASE_URL)
ingest = [
    "pypdf>=4.0",
    "reportlab>=4.0",
]
llm-anthropic = ["anthropic>=0.40"]
llm-openai = ["openai>=1.40"]
solver-cvxpy = ["cvxpy>=1.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
